fix: "nav-link-item" color in dark mode

--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ a:hover {
 }
 
 .nav-link-item {
+  color: var(--fg);
   font-size: 0.85rem;
   font-weight: 400;
   letter-spacing: 0.04em;
